# MathFlow

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gdb_cmds  inventory.mfc  simple.mfc  simple_test.mfc  vcpkg.json
apps/mf-runner/: CMakeLists.txt
apps/mf-runner/src/: main.c
apps/mf-window/: CMakeLists.txt
apps/mf-window/src/: main.c
apps/mfc/: CMakeLists.txt
apps/mfc/src/: main.c
assets/apps/: demo_inventory.mfapp  sdf_button.mfapp
assets/apps/test_pipeline/: physics.json  test_pipeline.mfapp
assets/graphs/: debug_uv.json  demo_inventory.json  logic_test.json  math_test.json  sdf_button.json  sdf_flat_color.json  simple_math.json
assets/lib/: Dot.json  Length.json  Mix.json  Normalize.json  SmoothStep.json
assets/lib/text/: render_text.json
assets/projects/inventory/: inventory.json  inventory.mfapp  inventory_logic.json  inventory_render.json  inventory_render_simple.json
assets/projects/sdf_button/: sdf_button.json  sdf_button.mfapp
assets/projects/text_demo/: render.json  text_demo.mfapp
docs/: architecture.md  future_gpu_strategy.md  guide_app_creation.md  roadmap.md  Анализ Deep Think.md  Аналитика Deep Think.md
modules/backend_cpu/: CMakeLists.txt
modules/backend_cpu/include/mathflow/backend_cpu/: mf_backend_cpu.h  mf_backend_utils.h  mf_math.h
modules/backend_cpu/src/: mf_backend_cpu.c
modules/backend_cpu/src/ops/: mf_ops_core.c
modules/base/: CMakeLists.txt
modules/base/include/mathflow/base/: mf_buffer.h  mf_json.h  mf_log.h  mf_math.h  mf_memory.h  mf_platform.h  mf_shape.h  mf_thread_pool.h  mf_types.h  mf_utils.h
modules/base/src/: mf_buffer.c  mf_json.c  mf_log.c  mf_memory.c  mf_platform.c  mf_shape.c  mf_thread_pool.c  mf_utils.c
modules/compiler/: CMakeLists.txt
modules/compiler/include/mathflow/compiler/: mf_compiler.h
modules/compiler/src/: mf_codegen.c  mf_compiler.c  mf_compiler_internal.h  mf_compiler_manifest.c  mf_graph_utils.c  mf_json_parser.c  mf_op_metadata.c  mf_passes.h  mf_semantics.c
modules/compiler/src/passes/: mf_pass_analyze.c  mf_pass_domain_split.c  mf_pass_fuse.c  mf_pass_inline.c  mf_pass_liveness.c  mf_pass_lower.c  mf_pass_validate.c
modules/engine/: CMakeLists.txt
modules/engine/include/mathflow/engine/: mf_engine.h  mf_pipeline.h
modules/engine/src/: mf_engine.c  mf_engine_internal.h  mf_pipeline.c
modules/host/: CMakeLists.txt
modules/host/include/mathflow/host/: mf_app_loader.h  mf_asset_loader.h  mf_host.h  mf_host_desc.h  mf_host_headless.h  mf_host_sdl.h  mf_loader.h
modules/host/src/: mf_app_loader.c  mf_asset_loader.c  mf_assets.c  mf_host.c  mf_host_common.c  mf_host_headless.c  mf_host_internal.h  mf_host_sdl.c  mf_loader.c  mf_loader.h  mf_manifest.c  mf_manifest_loader.c  mf_manifest_loader.h
modules/isa/: CMakeLists.txt
modules/isa/include/mathflow/isa/: mf_accessor.h  mf_backend.h  mf_base.h  mf_dispatch_table.h  mf_exec_ctx.h  mf_instruction.h  mf_kernel_ctx.h  mf_op_defs.h  mf_opcodes.h  mf_ops_db.inc  mf_program.h  mf_state.h  mf_tensor.h  mf_tensor_iter.h
modules/isa/src/: mf_exec_ctx.c  mf_opcodes.c  mf_tensor.c
modules/loader/: CMakeLists.txt
modules/loader/include/mathflow/loader/: mf_loader.h
modules/loader/src/: mf_loader.c
modules/ops/: CMakeLists.txt
modules/ops/include/mathflow/ops/: mf_kernel_utils.h  mf_ops_array.h  mf_ops_core.h
modules/ops/src/: mf_kernel_utils.h  mf_ops_array.c  mf_ops_core.c  mf_ops_internal.h  mf_ops_logic.c  mf_ops_math.c  mf_ops_matrix.c  mf_ops_state.c
modules/ops_array/src/: mf_ops_array.c
modules/ops_core/include/mathflow/ops_core/: mf_ops_core.h
modules/ops_core/src/: mf_ops_core.c
modules/platform/include/mathflow/platform/: mf_platform.h
modules/platform/src/: mf_platform.c
modules/scheduler/include/mathflow/scheduler/: mf_scheduler.h
modules/scheduler/src/: mf_scheduler.c
modules/vm/: CMakeLists.txt
modules/vm/include/mathflow/vm/: mf_memory.h  mf_refs.h  mf_vm.h  mf_vm_utils.h
modules/vm/src/: mf_memory.c  mf_vm.c  mf_vm_parallel.c
tests/graphs/: counter.json  filter_test.json  glsl_math_test.json  math_matrix_test.json  sdf_math_test.json  string_test.json  sub_inner.json  subgraph_main.json
tests/integration/test_pipeline/: physics.json  render.json  test_pipeline.mfapp
tests/unit/data/: array_test.json  dataframe_test.json  string_test.json
tests/unit/logic/: counter.json  filter_test.json  logic_test.json
tests/unit/math/: fail_shape_mismatch.json  glsl_math_test.json  math_matrix_test.json  math_test.json  mean_test.json  reduction_test.json  sdf_math_test.json  simple_math.json
tests/unit/structure/: main_recursive.json  multi_domain_test.json  sub_inner.json  sub_outer.json  subgraph_child.json  subgraph_child_multi.json  subgraph_main.json  subgraph_multi_test.json
tests/unit/structure/nested/: caller.json
tests/validation/: fail_index_dtype.json  fail_index_invalid_dtype.json  sub_with_index.json  test_index_i32.json
tools/: format_json.py
